[tool.poetry]
name = "geoplot"
version = "0.0.1"
description = "A tool to plot sample locations on a topographic map"
authors = ["Alexandra Jansen van Rensburg <jvromics@gmail.com>"]
licence = "MIT"
homepage = "https://github.com/alexjvr1/GeoPlot/"
repository = "https://github.com/alexjvr1/GeoPlot/"
readme = "README.md"
keywords = [
    "boinformatics",
    "sampling map", 
    "topographical map",
    "visualization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.3"
rasterio = "^1.3.10"
shapely = "^2.0.4"
matplotlib = "^3.8.4"
earthpy = "^0.9.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
